# pi-mono

./: .batch_state.json  .code-runner-skills-1.1.md  .code-runner-skills-1.md  .code-runner-skills-11.md  .code-runner-skills-12.md  .code-runner-skills-2.1.md  .code-runner-skills-2.3.md  .code-runner-skills-2.md  .code-runner-skills-3.1.md  .code-runner-skills-3.2.md  .code-runner-skills-5.md  .code-runner-skills-6.md  .code-runner-skills-T3.md  .code-runner-skills-T5.md  .code-runner-skills-T6.md  .code-runner-skills-T7.md  .gitignore  .ingest-code.json  .monitor-codebase.json  .nightly_fix_request.md  01_AGENT_OPERATOR_TASKS.yaml  01_AUTONOMOUS_INBOX_TASKS.md  01_CHUTES_CALL_TASKS.md  01_DESIGN_SKILLS_REFACTOR_TASKS.yaml  01_HACK_BATTLE_CODE_RUNNER.yaml  01_MONITOR_TREESITTER_PLAN.yaml  01_MUSIC_LAB_TASKS.md  01_PAPER_CLONE_TASKS.md  01_PI_READINESS_TASKS.md  02_CREATE_UX_TASKS.md  02_MUSIC_LAB_WORKBENCH_TASKS.yaml  02_THIN_INIT_PY_TASKS.md  03_CHAIN_REASONING_GPT_TASKS.md  03_MUSIC_LAB_PIPELINE_TASKS.yaml  04_PROMPT_LAB_ONE_SHOT_TASKS.yaml  04_WORKSHEETS_YAML_AUDIT_TASKS.yaml  05_RUNPOD_FLASH_TASKS.yaml  05_SPARTA_EXPLORER_REFINEMENT_TASKS.yaml  06_INTENT_AUGMENTATION_TASKS.yaml  06_QUERYSPEC_RESOLVER_TASKS.yaml  (+35 more)
.agent/: skills
.agent/skills/dogpile/: SKILL.md  __init__.py  adversarial_pdfs.txt  adversarial_pdfs_v2.txt  arxiv_search.py  brave.py  cli.py  codex.py  config.py  discord.py  discord_search.py  dogpile.py  dogpile_errors.json  dogpile_monolith.py  dogpile_state.json  dogpile_task_state.json  error_tracking.py  expansion_manifest.txt  finance_pdfs.txt  finance_pdfs_v2.txt  formatters.py  github_deep.py  github_search.py  industry_pdfs.txt  llm_fallback.py  monitor.py  nightly_dogpile.py  perplexity.py  pyproject.toml  rate_limit_state.json  readarr.py  review_request.md  run.sh  sanity.sh  sort_corpus.py  synthesis.py  task_monitor_integration.py  utils.py  wayback.py  youtube_search.py
.agent/skills/dogpile/resources/: README.md  default.yaml  presets.yaml  resource_registry.py  security.yaml
.agent/skills/dogpile/scripts/: harvest_others.py  harvest_others_v2.py  harvest_urls.py
.claude/: plan.json  (+3 more)
.claude/skills/agents-registry/: SKILL.md  pyproject.toml  run.sh
.claude/skills/agents-registry/agents_registry/: cli.py
.claude/skills/agents-registry/agents_registry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
.claude/skills/create-evidence-case/: DEPRECATED.md  SKILL.md  batch_50_f36.py  candidate_qra.py  collect.py  conftest.py  evidence_case.py  models.py  pyproject.toml  question_bank.py  report.py  run.sh  run_question_bank.py  runner.py  sanity.sh  scoring.py  storage.py  strategies.py  synthesis.py  test_live.py  test_models.py  test_report.py  test_runner.py  test_scoring.py  test_strategies.py
.claude/skills/create-evidence-case/create_evidence_case.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
.claude/skills/create-evidence-case/fixtures/: eval.json
.claude/skills/create-evidence-case/fixtures/expected/: q01_firmware_tampering_satisfied.json  q10_fpga_cmmc_inconclusive.json  q12_offtopic_not_satisfied.json
.claude/skills/create-evidence-case/state/: eval_baseline.json
.claude/skills/create-evidence-case/state/candidates/: gap_6c72f4ba_review.json
.claude/skills/evidence-case-lab/: SKILL.md  diagnosis.py  evidence_case_lab.py  pyproject.toml  run.sh
.claude/skills/evidence-case-lab/state/: REPORT.md  last_results.json  questions.json
.claude/skills/extract-tables/src/rust/: Cargo.toml
.claude/skills/lie-detector/: .lie-detector-seal.json  SKILL.md  WALKTHROUGH_R14.md  cascade.py  classifier.py  conversation_audit.py  delta_analysis.py  intent_gate.py  invariants.py  lie_detector.py  lie_detector_task_state.json  llm_auditor.py  pyproject.toml  run.sh  sanity.sh  sealed_grading.py  skill_chain.py  taxonomy_check.py  trace_compose.py
.claude/skills/lie-detector/lean4_specs/: compatibility.lean  grading_bounds.lean  weighted_sum.lean
.claude/skills/lie-detector/training_data/: augmented_r14.jsonl  seed_incidents.jsonl
.claude/skills/ops-costs/: SKILL.md  aggregator.py  pyproject.toml  run.sh  sanity.sh
.claude/skills/qra-review/: SKILL.md  pyproject.toml  run.sh  sanity.sh
.claude/skills/qra-review/qra_review/: __init__.py  __main__.py  tui.py  tui_chat.py  tui_theme.py  tui_widgets.py
.claude/skills/review-assurance-case/: SKILL.md  config.py  memory_integration.py  prompts.py  pyproject.toml  review_assurance_case.py  run.sh
.claude/skills/review-assurance-case/providers/: __init__.py
.claude/skills/review-assurance-case/sanity/: sanity.sh
.claude/skills/test/: SKILL.md  pyproject.toml  run.sh  sanity.sh  test_runner.py
.pi/skills/classifier-lab/: pyproject.toml
.pi/skills/classifier-lab/scripts/: data_enrichment.py  generate_manifest.py  generate_model_card.py  kickoff.py  pipeline.py  probe_regex_classifiers.py  run_eval_questions.py  training_loop.py
.pi/skills/create-classifier/: pyproject.toml
.pi/skills/create-classifier/projects/email-spam-detection/: benchmark.json  eval-questions.json  eval-results.json  meta.json  research-gate.json  research.md  samples.jsonl  test.jsonl  train.jsonl  tune-config.json  val.jsonl
.pi/skills/create-classifier/projects/imdb-sentiment/: meta.json  research-gate.json  research.md  tune-config.json
.pi/skills/create-classifier/projects/sentiment-analysis/: benchmark.json  meta.json  test.jsonl  val.jsonl
.pi/skills/create-classifier/templates/: multilabel_text_classifier.py  text_classifier.py
.pi/skills/dogpile/: pyproject.toml
.pi/skills/thunderdome/: pyproject.toml
.pi/skills/thunderdome/scripts/: dispatch.py  thunderdome.py
.pi/skills/train-convo-steering/: README.md  SKILL.md  pyproject.toml  run.sh  sanity.sh
.pi/skills/train-convo-steering/sanity/: test_sanity.py
.pi/skills/train-convo-steering/train_convo_steering/: cli.py  heuristics.py  io_utils.py  judge_deepseek.py  pipeline.py  policy.py  presets.py  schema.py  task_monitor_client.py
.pi/skills/ux-lab/: SKILL.md  pyproject.toml  run.sh  sanity.sh
(+11222 files in other folders)
