[project]
name = "dogpile"
version = "0.1.0"
description = "Deep research aggregator searching Web, AI, Code, Papers, and Videos simultaneously"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "PyYAML>=6.0",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
dogpile = "cli:app"
