[project]
name = "agents-registry"
version = "0.1.0"
description = "Centralized agent identity registry generator"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "loguru",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents_registry*"]
