[project]
name = "evidence-case-lab"
version = "0.2.0"
description = "Self-improving evidence case convergence loop"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["evidence_case_lab", "diagnosis"]
