[project]
name = "ops-costs"
version = "0.1.0"
description = "Unified cost aggregator across all provider ops-* skills"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["aggregator.py", "run.sh", "SKILL.md", "sanity.sh"]
