[project]
name = "pi-skill-classifier-lab"
version = "0.1.0"
description = "Runtime package for the classifier-lab skill"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate",
    "datasets>=2.20.0",
    "httpx>=0.27.0",
    "huggingface-hub>=0.20.0",
    "joblib",
    "loguru>=0.7.0,<0.7.3",
    "numpy>=1.24",
    "pillow>=10.0",
    "polars",
    "PySide6>=6.6.0",
    "scikit-learn>=1.3",
    "setfit>=1.1.3",
    "tbparse",
    "tensorboard",
    "timm>=0.9",
    "torch>=2.0",
    "torchvision>=0.15",
    "tqdm>=4.60",
    "transformers>=4.45,<5",
    "typer>=0.9",
]

[project.optional-dependencies]
flash = [
    "runpod>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
