[project]
name = "pi-skill-create-classifier"
version = "0.1.0"
description = "Runtime package for the create-classifier skill"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27",
    "datasets",
    "huggingface-hub",
    "joblib>=1.3.0",
    "loguru>=0.7.0,<0.7.3",
    "numpy>=1.24.0",
    "optuna",
    "pillow>=10.0.0",
    "pymupdf",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.4.0",
    "torchvision",
    "tqdm>=4.66.0",
    "transformers>=4.44.0",
    "typer>=0.9.0",
    "accelerate>=1.13.0",
    "tiktoken>=0.12.0",
    "requests>=2.33.1",
]

[tool.uv]
package = false
