[project]
name = "dogpile"
version = "0.1.0"
description = "Deep research aggregator searching Web, AI, Code, Papers, and Videos simultaneously"
requires-python = ">=3.12,<3.13"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "PyYAML>=6.0",
    "types-PyYAML>=6.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0,<0.7.3",
    "typing_extensions>=4.0.0",
    "python-dotenv>=1.0.0",
    "textual>=0.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
dogpile = "cli:app"
