[project]
name = "ux-lab"
version = "0.1.0"
description = "Agent-controllable design canvas with React export"
requires-python = ">=3.11,<3.13"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
